--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,11 @@ ul {
   padding: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 /* Header */
 
 .global-header {
@@ -121,6 +126,10 @@ ul {
 
 [aria-expanded="true"] .icon--menu {
   background-image: url("x.svg");
+}
+
+.icon--plus {
+  background-image: url("plus.svg");
 }
 
 /* Navigation */
@@ -211,4 +220,159 @@ ul {
   #button-menu {
     display: none;
   }
+}
+
+/* Section */
+
+.section {
+  padding: 48px 0;
+}
+
+.section__wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+
+.section__title {
+  color: rgb(var(--foreground));
+  font-weight: 400;
+}
+
+.section__title span {
+  font-style: oblique;
+}
+
+.section__title--large {
+  font-size: 30px;
+  line-height: 36px;
+  margin-bottom: 24px;
+  max-width: 327px;
+}
+
+.section__copy {
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 30px;
+  max-width: 550px;
+}
+
+.section__title--undistance,
+.section__copy--undistance {
+  margin-bottom: 0;
+}
+
+.section__image {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .section__title--large {
+    font-size: 36px;
+    line-height: 40px;
+    max-width: 450px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .section {
+    padding: 56px 0;
+  }
+
+  .section--flex {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-top: -192px;
+    padding-top: 0;
+  }
+
+  .section__wrap {
+    gap: 56px;
+  }
+
+  .section__title--large {
+    font-size: 40px;
+    line-height: 42px;
+    max-width: 472px;
+  }
+
+  .section__copy {
+    margin-bottom: 32px;
+    max-width: 600px;
+  }
+
+  .section__copy--undistance {
+    margin-bottom: 0;
+  }
+
+  .section__image {
+    display: block;
+    flex-basis: 750px;
+    z-index: -1;
+  }
+}
+
+@media (min-width: 1280px) {
+  .section {
+    padding: 64px 0;
+  }
+
+  .section--flex {
+    margin-top: -202px;
+    padding-top: 0;
+  }
+
+  .section__wrap {
+    gap: 64px;
+  }
+
+  .section__title--large {
+    font-size: 48px;
+    line-height: 48px;
+    max-width: 575px;
+  }
+
+  .section__copy {
+    font-size: 20px;
+    max-width: 670px;
+  }
+}
+
+/* Partnership */
+
+.partnership {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-top: 48px;
+}
+
+.partnership__copy {
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.partnership__group {
+  display: flex;
+}
+
+.partnership__item {
+  background-color: rgb(var(--background));
+  border: 1px solid rgba(var(--foreground), 0.32);
+  border-radius: 100vmax;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 11px;
+}
+
+.partnership__item + .partnership__item {
+  margin-left: -6px;
+}
+
+.partnership__image {
+  object-fit: contain;
+  height: 24px;
+  width: 24px;
 }
