--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,7 @@ img {
   background-color: rgb(var(--background));
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .global-header__inner {
@@ -235,6 +236,13 @@ img {
   text-align: center;
 }
 
+.section--with-theme {
+  background-color: rgb(214, 226, 251);
+  border-radius: 6px;
+  margin-top: 48px;
+  padding: 48px 32px;
+}
+
 .section__wrap {
   display: flex;
   flex-direction: column;
@@ -263,6 +271,10 @@ img {
   max-width: 327px;
 }
 
+.section__title--cta {
+  max-width: 100%;
+}
+
 .section__copy {
   font-size: 18px;
   line-height: 28px;
@@ -284,16 +296,29 @@ img {
 }
 
 @media (min-width: 768px) {
+  .section--with-theme {
+    padding: 56px;
+  }
+
   .section__title--large {
     font-size: 36px;
     line-height: 40px;
     max-width: 450px;
+  }
+
+  .section__title--cta {
+    max-width: 100%;
   }
 }
 
 @media (min-width: 1024px) {
   .section {
     padding: 56px 0;
+  }
+
+  .section--with-theme {
+    margin-top: 56px;
+    padding: 64px;
   }
 
   .section--flex {
@@ -319,6 +344,10 @@ img {
     max-width: 472px;
   }
 
+  .section__title--cta {
+    max-width: 100%;
+  }
+
   .section__copy {
     margin-bottom: 32px;
     max-width: 600px;
@@ -340,6 +369,10 @@ img {
     padding: 64px 0;
   }
 
+  .section--with-theme {
+    margin-top: 64px;
+  }
+
   .section--flex {
     margin-top: -216px;
     padding-top: 0;
@@ -353,6 +386,10 @@ img {
     font-size: 48px;
     line-height: 48px;
     max-width: 575px;
+  }
+
+  .section__title--cta {
+    max-width: 100%;
   }
 
   .section__copy {
@@ -437,7 +474,7 @@ img {
   border: 1px solid rgb(214, 226, 251);
   border-radius: 6px;
   height: 256px;
-  padding: 40px;
+  padding: 36px;
   text-align: left;
 }
 
@@ -476,5 +513,146 @@ img {
 
   .card--ghost {
     display: block;
+  }
+}
+
+/* Slide */
+
+.slide {
+  margin-top: 48px;
+  position: relative;
+}
+
+.slide__item {
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  gap: 32px;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.slide__item.active {
+  display: flex;
+  opacity: 1;
+}
+
+.slide__quote {
+  font-size: 20px;
+  line-height: 28px;
+  max-width: 532px;
+}
+
+.slide__cite {
+  display: inline-flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 24px;
+  font-style: normal;
+}
+
+.slide__cite img {
+  border-radius: 100vmax;
+  height: 40px;
+  width: 40px;
+}
+
+.slide__cite div p:first-child {
+  color: rgb(var(--foreground));
+}
+
+.slide__navigation {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 36px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 86%;
+}
+
+@media (min-width: 1024px) {
+  .slide {
+    margin-top: 56px;
+    width: 100%;
+  }
+
+  .slide__item {
+    gap: 32px;
+  }
+
+  .slide__navigation {
+    bottom: 70%;
+    max-width: 968px;
+    width: 92%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .slide {
+    margin-top: 54px;
+  }
+}
+
+/* Footer */
+
+.footer {
+  padding: 64px 0 24px;
+}
+
+.footer__wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.footer__item {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.footer__item:first-child {
+  max-width: 256px;
+}
+
+.footer__item--special {
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.footer__item a:hover {
+  color: rgb(var(--foreground));
+}
+
+.footer__form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 14px;
+}
+
+.footer__input {
+  border: 1px solid rgb(var(--foreground));
+  border-radius: 6px;
+  color: rgb(var(--foreground));
+  font: inherit;
+  padding: 8px 16px;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    padding-bottom: 32px;
+  }
+
+  .footer__wrap {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer__item:not(:last-child) {
+    flex-shrink: 0;
   }
 }
